# kirodex

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY_AUDIT.md  SKILLS_SECURITY_AUDIT.md  activity.md  downloads.json  index.html  package.json  tailwind.css  todo.md  vite.config.ts  vitest.config.ts
.github/homebrew/Casks/: kirodex.rb.template
.github/workflows/: analytics-snapshot.yml  build-windows.yml  ci.yml  deploy-website.yml  pr-build.yml  release.yml
.kiro/goal/: continuation.md
.kiro/steering/: defensive-react-patterns.md  icons.md
.plan/: diff-commit.plan
data/: github-releases-2026-04-19.csv  github-releases-2026-04-21.csv  github-releases-2026-04-24.csv  github-releases-2026-04-25.csv  github-releases-2026-04-26.csv  github-releases-2026-04-27.csv  github-releases-2026-04-28.csv  github-releases-2026-04-29.csv  github-releases-2026-04-30.csv  github-releases-2026-05-01.csv  github-releases-2026-05-02.csv  github-releases-2026-05-03.csv  github-releases-2026-05-04.csv  github-releases-2026-05-05.csv  github-releases-2026-05-06.csv  github-releases-2026-05-07.csv  github-releases-2026-05-08.csv  github-releases-2026-05-09.csv  github-releases-2026-05-10.csv  github-releases-2026-05-11.csv  github-releases-2026-05-12.csv  github-releases-2026-05-13.csv  github-releases-2026-05-14.csv  github-releases-2026-05-15.csv  github-releases-2026-05-16.csv  github-releases-2026-05-17.csv  github-releases-2026-05-18.csv  github-releases-2026-05-19.csv  github-releases-2026-05-20.csv  github-releases-2026-05-21.csv  github-releases-2026-05-22.csv  github-releases-2026-05-23.csv  github-releases-2026-05-24.csv  github-releases-2026-05-25.csv  github-releases-2026-05-26.csv  github-releases-2026-05-27.csv  github-releases-2026-05-28.csv  github-releases-2026-05-29.csv  github-releases-2026-05-30.csv  github-releases-2026-05-31.csv  (+55 more)
docs/: architecture.md  development.md  getting-started.md  goal-mode.md  ipc-reference.md  keyboard-shortcuts.md  slash-commands.md
scripts/: generate-notes.sh  release.sh
src/: tailwind.css
src-tauri/: Cargo.toml  activity.md  tauri.ci.conf.json  tauri.conf.json
src-tauri/.kiro_goal_templates/: budget_limit.md  initial.md
src-tauri/apps/analytics/: CLAUDE.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/prod/: icon.icns
src-tauri/src/: lib.rs  main.rs  web.rs
src-tauri/src/commands/: acp.rs  error.rs  fs_ops.rs  fuzzy.rs  git.rs  goal.rs  highlight.rs  kiro_config.rs  mod.rs  pty.rs  settings.rs  vcs_status.rs
src-tauri/src/commands/acp/: client.rs  commands.rs  connection.rs  mod.rs  sandbox.rs  tests.rs  types.rs
src/renderer/: App.tsx  main.tsx
src/renderer/components/: AppHeader.tsx  CommandPalette.tsx  CommitDialog.tsx  ErrorBoundary.tsx  GitActionsGroup.tsx  Onboarding.tsx  OpenInEditorGroup.tsx  UpdateAvailableDialog.tsx  WhatsNewDialog.tsx  header-breadcrumb.tsx  header-toolbar.tsx
src/renderer/components/analytics/: AnalyticsDashboard.tsx  DiffStatsChart.tsx  SlashCommandChart.tsx  TokensChart.tsx
src/renderer/components/chat/: AssistantTextRow.tsx  AttachmentPreview.tsx  AutoApproveToggle.tsx  BranchList.tsx  BranchSelector.tsx  BtwOverlay.test.tsx  ChangedFilesSummary.tsx  ChatInput.tsx  ChatMarkdown.tsx  ChatPanel.tsx  ChatTextarea.tsx  ChatToolbar.tsx  CollapsedAnswers.test.tsx  CollapsedAnswers.tsx  CollapsibleContent.tsx  ContextRing.tsx  EmptyThreadSplash.tsx  ExecutionPlan.tsx  FileMentionPicker.tsx  GitPanels.tsx  GoalCard.tsx  GoalModal.tsx  GoalStatusOverlay.tsx  InlineCommandPicker.tsx  InlineDiff.tsx  MessageItem.tsx  MessageList.tsx  ModelPicker.tsx  ModelPickerPanel.tsx  PendingChat.tsx  PermissionBanner.tsx  PlanHandoffCard.tsx  PlanToggle.tsx  QuestionCards.tsx  QueuedMessages.tsx  SlashCommandPicker.tsx  SlashPanels.tsx  SplitChatLayout.tsx  SplitPanelHeader.tsx  SystemMessageRow.tsx  (+16 more)
src/renderer/components/code/: CodePanel.tsx  DebugLog.tsx  DiffFileActionBar.tsx  DiffFileSidebar.tsx  DiffSummaryPanel.tsx  DiffToolbar.tsx  DiffViewer.tsx  TerminalOutput.tsx  (+1 more)
src/renderer/hooks/: useAttachments.test.ts  useAttachments.ts  useChatInput.ts  useKeyboardShortcuts.ts  useMenuPosition.ts  useModifierKeys.ts  useSidebarTasks.test.ts  useSidebarTasks.ts  useSlashAction.test.ts  useSlashAction.ts  useUpdateChecker.test.ts  useUpdateChecker.ts  useZoomLimit.ts
src/renderer/lib/: analytics-aggregators.ts  analytics.test.ts  analytics.ts  changelog.ts  fuzzy-search.test.ts  history-store.test.ts  history-store.ts  ipc.ts  jsInterceptors.ts  notifications.ts  question-parser.test.ts  question-parser.ts  shiki-stub.ts  shikijs-transformers-stub.ts  sounds.test.ts  thread-memory.ts  timeline-stability.ts  timeline.test.ts  timeline.ts  utils.test.ts  utils.ts  web-rpc.ts
src/renderer/stores/: debugStore.test.ts  diffStore.test.ts  diffStore.ts  fileTreeStore.ts  goal-integration.test.ts  goalStore.test.ts  goalStore.ts  jsDebugStore.ts  kiroStore.test.ts  settingsStore.test.ts  settingsStore.ts  task-store-listeners.ts  task-store-selectors.test.ts  task-store-types.ts  taskStore.test.ts  taskStore.ts  updateStore.test.ts  updateStore.ts
src/renderer/types/: analytics.ts  index.ts
website/: changelog-data.js  changelog.html  features.html  index.html  style.css
(+46 files in other folders)
