[package]
name = "kirodex"
version = "0.7.0"
edition = "2021"

[lib]
name = "kirodex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "kirodex"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "time", "process"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
agent-client-protocol = { version = "0.10.4", features = ["unstable_session_model", "unstable_session_usage", "unstable_session_fork", "unstable_cancel_request", "unstable_message_id"] }
base64 = "0.22"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
log = "0.4"
open = "5"
ignore = "0.4"
window-vibrancy = "0.6"
tauri-plugin-log = "2"
git2 = { version = "0.20", features = ["ssh", "https"] }
thiserror = "2"
which = "7"
confy = "0.6"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"


[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2"
